[gd_scene load_steps=18 format=3 uid="uid://cj48v8xyc70da"]

[ext_resource type="Script" uid="uid://7txkaxp67kht" path="res://assets/scripts/characters/BaseCharacter.gd" id="1_rm0y7"]
[ext_resource type="Resource" uid="uid://61k8v62kkx4q" path="res://assets/resources/Player.tres" id="2_o5vw8"]
[ext_resource type="Texture2D" uid="uid://t371gx7chvhs" path="res://assets/graphics/player/Idle.png" id="4_61bru"]
[ext_resource type="Texture2D" uid="uid://mxbj86xhlga1" path="res://assets/graphics/player/Walking.png" id="4_hl8et"]
[ext_resource type="Script" uid="uid://dq21ry8b36jlr" path="res://assets/scripts/characters/modules/AnimationsModule.gd" id="5_61bru"]
[ext_resource type="Script" uid="uid://ca81overbffeg" path="res://assets/scripts/characters/modules/OrientationModule.gd" id="6_74ir4"]
[ext_resource type="Script" uid="uid://bjuiflculv8ri" path="res://assets/scripts/characters/states/JumpingState.gd" id="8_61bru"]
[ext_resource type="Script" uid="uid://bmdyfqtsvu50n" path="res://assets/scripts/characters/states/WalkingState.gd" id="9_k5o3k"]
[ext_resource type="Script" uid="uid://37odoxgat8ux" path="res://assets/scripts/characters/states/FallingState.gd" id="10_k5o3k"]
[ext_resource type="Script" uid="uid://eaer5de2c7s6" path="res://assets/scripts/characters/states/IdleState.gd" id="18_esr54"]
[ext_resource type="Script" uid="uid://b8sptsapdclmf" path="res://assets/scripts/characters/states/base/StateMachine.gd" id="19_8vdor"]

[sub_resource type="Animation" id="Animation_74ir4"]
resource_name = "Falling"
length = 0.40001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_hl8et")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_61bru"]
resource_name = "Idle"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_61bru")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_hl8et"]
resource_name = "Jumping"
length = 0.40001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_hl8et")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_k5o3k"]
resource_name = "Walking"
length = 0.40001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_hl8et")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k5o3k"]
_data = {
&"Falling": SubResource("Animation_74ir4"),
&"Idle": SubResource("Animation_61bru"),
&"Jumping": SubResource("Animation_hl8et"),
&"Walking": SubResource("Animation_k5o3k")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elw5e"]
size = Vector2(89, 244)

[node name="BaseCharacter" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "sprite", "state_machine") groups=["Player"]]
z_index = -100
collision_layer = 2
script = ExtResource("1_rm0y7")
animation_player = NodePath("AnimationPlayer")
sprite = NodePath("Sprite2D")
state_machine = NodePath("StateMachine")
character_data = ExtResource("2_o5vw8")
metadata/_edit_horizontal_guides_ = [69.6705]
metadata/_edit_vertical_guides_ = [71.0, -85.0]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k5o3k")
}
playback_auto_capture_ease_type = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_hl8et")
offset = Vector2(14.5999, 0)
hframes = 2
vframes = 2
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 35.9993)
rotation = 0.00136239
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_elw5e")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
scale = Vector2(3.33333, 3.33333)

[node name="GameUI" type="CanvasLayer" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="GameUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="StatsHBox" type="HBoxContainer" parent="GameUI/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/MarginContainer/StatsHBox"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_vertical = 0

[node name="StaminaBar" type="ProgressBar" parent="GameUI/MarginContainer/StatsHBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 1000.0
step = 0.5
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="GameUI/MarginContainer/StatsHBox/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
step = 1.0
show_percentage = false

[node name="Modules" type="Node" parent="."]

[node name="AnimationsModule" type="Node" parent="Modules" node_paths=PackedStringArray("animation_player", "state_machine")]
script = ExtResource("5_61bru")
animation_player = NodePath("../../AnimationPlayer")
state_machine = NodePath("../../StateMachine")

[node name="OrientationModule" type="Node" parent="Modules" node_paths=PackedStringArray("sprite")]
script = ExtResource("6_74ir4")
sprite = NodePath("../../Sprite2D")

[node name="Handlers" type="Node" parent="."]

[node name="TimersHandler" type="Node" parent="Handlers"]

[node name="AreasHandler" type="Node" parent="Handlers"]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("19_8vdor")
character = NodePath("..")
initial_state = "FallingState"
metadata/_custom_type_script = "uid://b8sptsapdclmf"

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("18_esr54")
metadata/_custom_type_script = "uid://eaer5de2c7s6"

[node name="JumpingState" type="Node" parent="StateMachine"]
script = ExtResource("8_61bru")
metadata/_custom_type_script = "uid://bjuiflculv8ri"

[node name="WalkingState" type="Node" parent="StateMachine"]
script = ExtResource("9_k5o3k")
metadata/_custom_type_script = "uid://bmdyfqtsvu50n"

[node name="FallingState" type="Node" parent="StateMachine"]
script = ExtResource("10_k5o3k")
metadata/_custom_type_script = "uid://37odoxgat8ux"
